cambio en el index

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Header Section -->
 <header class="bg-dark text-white text-center py-4">
     <h1>Informe sobre Grooming <i class="fas fa-shield-alt"></i></h1>
-    <p class="lead">Conoce los peligros y cómo prevenir el grooming online 🚨</p>
+    <p class="lead">Conoce los peligros y cómo prevenir el grooming online </p>
 </header>
 
 <!-- Main Content Section -->
