--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="installation-step">
             <h4>Paso 1: Desembalaje</h4>
             <p>Abre la caja y verifica que todos los componentes estén incluidos: cámara, adaptador de corriente, tornillos y manual de usuario.</p>
-            <img src="img/paso1.jpg" class="img-fluid step-img" alt="Desembalaje">
+            <img src="img/paso1.png" class="img-fluid step-img" alt="Desembalaje">
         </div>
     
         <div class="installation-step">
