--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="installation-step">
             <h4>Paso 2: Descarga de la Aplicación</h4>
             <p>Dentro del manual encontrarás un código QR que te permitirá descargar la app <strong>Oryx Home</strong> para configurar y monitorear la cámara desde tu celular.</p>
-            <img src="img/codigo-qr.jpg" class="img-fluid qr-img" alt="Código QR para descargar la app">
+            <img src="img/codigo-qr.png" class="img-fluid qr-img" alt="Código QR para descargar la app">
         </div>
     
         <div class="installation-step">
