--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="installation-step">
             <h4>Paso 3: Conexión de Energía</h4>
             <p>Conecta la cámara a la corriente eléctrica usando el adaptador incluido.</p>
-            <img src="img/paso2.jpg" class="img-fluid step-img" alt="Conexión de Energía">
+            <img src="img/paso2.jpeg" class="img-fluid step-img" alt="Conexión de Energía">
         </div>
     
         <div class="installation-step">
